<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="20sp"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="14sp"
            android:paddingStart="@dimen/_5sdp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_id"
            android:layout_weight="2"
            android:textSize="14sp"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textStyle="bold"
            android:layout_weight="1"
            android:paddingStart="@dimen/_5sdp"
            android:textSize="14sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_password"
            android:layout_weight="2"
            android:textSize="14sp"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/ok"
            android:textStyle="bold"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_200"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/exit"
            android:textStyle="bold"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:backgroundTint="@color/purple_200"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/forgot_password"
            android:textStyle="bold"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            />
    </TableRow>
</TableLayout>