<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/txtUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textStyle="bold"
        android:textSize="14sp"
        android:paddingStart="@dimen/_5sdp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/txtLogin"/>

    <EditText
        android:id="@+id/edtId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtUserName"
        android:paddingStart="@dimen/_5sdp"
        android:hint="@string/input_id"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/txtPassWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textStyle="bold"
        android:layout_below="@id/edtId"
        android:paddingStart="@dimen/_5sdp"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/edtPassWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_password"
        android:layout_below="@id/txtPassWord"
        android:paddingStart="@dimen/_5sdp"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtPassWord"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/ok"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtPassWord"
        android:layout_margin="@dimen/_5sdp"
        android:layout_toEndOf="@id/btnOk"
        android:layout_toStartOf="@id/btnForgot"
        android:backgroundTint="@color/purple_200"
        android:text="@string/exit"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtPassWord"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:text="@string/forgot_password"
        android:textStyle="bold" />
</RelativeLayout>